--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+* {
+    font-family: "Outfit", sans-serif;
+
+    box-sizing: border-box;
+}
+@theme {
+    --color-primary: #4fbf8b;
+    --color-primary-dull: #44ae7c;
+}
